# MediCheck

./: .gitignore  LICENSE  MediCheck.py  README.md  medicines.py  orders.py  pyproject.toml  setup.py  stocks.py
.github/ISSUE_TEMPLATE/: FEATURE-REQUEST.yaml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
