[tool.poetry]
name = "medicheck"
version = "0.1.0"
description = "An application for managing pharmacies."
authors = ["Kunal Kumar <kunalkumarchourasiya2021@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mysql-connector-python = "^8.3.0"

[tool.poetry.group.dev.dependencies]
mysql-connector-python = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
