[project]
name = "medicheck"
version = "0.1.0"
description = "An application for managing pharmacies."
authors = [{"name"="Kunal Kumar", "email"="kunalkumarchourasiya2021@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["MediCheck", "Pharmacy", "Management System"]

[build-system]
requires = ["poetry-core"]

[tool.poetry.dependencies]
mariadb = "^1.1.14"
